# CP-ABE

./: BUILD.txt  CMakeLists.txt  _diag_plain.txt  _diag_plain.txt.ct  _diag_plain.txt.ct.json  _tmp.ct  _tmp.ct.json  _tmp_msg.txt  gui.py
abe_state/: pairing.param
src/: abe_core.c  abe_core.h  abe_ct_pack.c  abe_ct_pack.h  abe_io.c  abe_io.h  abe_state.c  abe_state.h  cli_cp_abe.c  crypto_utils.c  crypto_utils.h  kek_tree.c  kek_tree.h  lsss.c  lsss.h  main.c
